tests/regression/errors/basic/import_error_20.csd
// Import error test 20
yeet "nonexistent_module_20"
sus result drip = some_function(20)
